--- a/landing.html
+++ b/landing.html
@@ -77,7 +77,7 @@
             <div class="detail-box">
               <h5>Flying Taxi</h5>
               <p>Lorem ipsum dolor sit ame</p>
-              <a href=""> Select </a>
+              <a href="index.html"> Select </a>
             </div>
           </div>
         </div>
