--- a/landing.html
+++ b/landing.html
@@ -13,7 +13,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Urotaxi</title>
+    <title>TaxiKing</title>
 
     <link
       rel="stylesheet"
@@ -28,9 +28,52 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="landing.css" />
+    <link rel="stylesheet" href="styling.css" />
   </head>
   <body class="sub_page">
+    <div class="hero_area">
+      <!-- header section strats -->
+      <header class="header_section">
+        <div class="container-fluid">
+          <nav class="navbar navbar-expand-lg custom_nav-container ">
+            <a class="navbar-brand" href="index.html">
+              <span>
+                TaxiKing
+              </span>
+            </a>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+  
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
+                <ul class="navbar-nav  ">
+                  <li class="nav-item ">
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="aboutUs.html"> About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="landing.html"> Services </a>
+                  </li>
+                  
+                  <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact Us</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="login.html">Login</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            
+          </nav>
+        </div>
+      </header>
+      <!-- end header section -->
+    </div> 
     <section class="service_section layout_padding">
       <div class="container">
         <div class="heading_container">
@@ -42,7 +85,10 @@
         <div class="service_container">
           <div class="box">
             <div class="img-box">
-              <img src="someimage.png" alt="" /><!-- Image to be added later -->
+              <img
+                src="./images/about-img.png"
+                alt=""
+              /><!-- Image to be added later -->
             </div>
             <div class="detail-box">
               <h5>Cab</h5>
@@ -52,7 +98,7 @@
           </div>
           <div class="box">
             <div class="img-box">
-              <img src="someimage.png" alt="" />
+              <img src="./images/about-img.png" alt="" />
             </div>
             <div class="detail-box">
               <h5>Rental</h5>
@@ -62,7 +108,7 @@
           </div>
           <div class="box">
             <div class="img-box">
-              <img src="someimage.png" alt="" />
+              <img src="./images/delivery-man.png" alt="" />
             </div>
             <div class="detail-box">
               <h5>Party Limmo</h5>
@@ -72,7 +118,7 @@
           </div>
           <div class="box">
             <div class="img-box">
-              <img src="someimage.png" alt="" />
+              <img src="./images/airplane.png" alt="" />
             </div>
             <div class="detail-box">
               <h5>Flying Taxi</h5>
