--- a/landing.html
+++ b/landing.html
@@ -38,7 +38,7 @@
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="index.html">
               <span>
-                TaxiKing
+                GRAB
               </span>
             </a>
             </a>
@@ -92,7 +92,7 @@
             </div>
             <div class="detail-box">
               <h5>Cab</h5>
-              <p>Lorem ipsum dolor sit ame</p>
+              <p>Book a quick cab ride!</p>
               <a href=""> Select </a>
             </div>
           </div>
@@ -102,7 +102,7 @@
             </div>
             <div class="detail-box">
               <h5>Rental</h5>
-              <p>Lorem ipsum dolor sit ame</p>
+              <p>Rental car options.</p>
               <a href=""> Select </a>
             </div>
           </div>
@@ -112,7 +112,7 @@
             </div>
             <div class="detail-box">
               <h5>Party Limmo</h5>
-              <p>Lorem ipsum dolor sit ame</p>
+              <p>Party car options.</p>
               <a href=""> Select </a>
             </div>
           </div>
@@ -122,7 +122,7 @@
             </div>
             <div class="detail-box">
               <h5>Flying Taxi</h5>
-              <p>Lorem ipsum dolor sit ame</p>
+              <p>Fastest way to complete a ride!</p>
               <a href="index.html"> Select </a>
             </div>
           </div>
