--- a/paymentsReciept.html
+++ b/paymentsReciept.html
@@ -13,7 +13,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>TaxiKing</title>
+    <title>GRAB</title>
 
     <link
       rel="stylesheet"
@@ -39,7 +39,7 @@
 
         <div class="card__body">
           <img
-            src="http://nathgreen.co.uk/assets/img/nath.jpg"
+            src="./images/download.png"
             class="card__avatar"
           />
           <div class="card__recipient-info">
@@ -47,7 +47,7 @@
             <p class="card__email">fullmarksDedo@sir.please</p>
           </div>
 
-          <h1 class="card__price"><span></span>20<span>.00</span></h1>
+          <h1 class="card__price"><span></span>200<span>.00</span></h1>
 
           <p class="card__method">Payment method</p>
           <div class="card__payment">
