--- a/landing.html
+++ b/landing.html
@@ -13,7 +13,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>TaxiKing</title>
+    <title>GRAB</title>
 
     <link
       rel="stylesheet"
@@ -60,7 +60,7 @@
                   </li>
                   
                   <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact Us</a>
+                    <a class="nav-link" href="#">Contact Us</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="login.html">Login</a>
